@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.3
   -  Added language files
      * DCS (Stelio Passaris)
+     * Locomotive Basic (Nacho Cabanes)
      * LSL2 (Linden Scripting Language) (William Fry)
      * Modula-3 (Martin Bishop)
      * Oberon-2 (Mike Mol)
